# coin

./: CMakeLists.txt
include/client/: client.h
include/coin/: coin.h
include/game/: game.h
include/server/: server.h  session.h
include/utilities/: utilities.h
src/: CMakeLists.txt
src/client/: client.cpp
src/coin/: coin.cpp
src/game/: game.cpp
src/server/: server.cpp  session.cpp
src/utilities/: utilities.cpp
tests/client/: test_client.cpp
tests/coin/: test_coin.cpp
tests/game/: test_game.cpp
tests/server/: test_server.cpp
